# cerisse

./: .gitbook.yaml  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md  mkdocs.yml  mkdocs.yml.origina
EB_CNS/Exec/: CMakeLists.txt  Make.CNS
EB_CNS/Exec/Aerofoil/: GNUmakefile  README.md  inputs  prob.H  prob.cpp
EB_CNS/Exec/Channel/: GNUmakefile  Make.package  README.md  inputs  prob.H  prob.cpp  prob_parm.H  prob_transport.H
EB_CNS/Exec/Combustor/: GNUmakefile  Make.package  bcfill.cpp  inputs  prob.H  prob.cpp  prob_parm.H  prob_parm.cpp
EB_CNS/Exec/CombustorNTU/: GNUmakefile  Make.package  cerisse  input  input_amr  input_fine  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/CombustorNTU/last_try/: input
EB_CNS/Exec/CombustorNTU/old_files/: prob.H  prob.cpp  prob_parm.H  prob_parm.cpp
EB_CNS/Exec/CombustorNTU/try1/: inputs  prob.H  prob.cpp
EB_CNS/Exec/CombustorNTU/try2/: input  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/ConvectingVortex/: GNUmakefile  inputs  moving-vortex.ini  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/DDT/: GNUmakefile  README.md  ddt.ini  inputs_SF  inputs_nomodel_small  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/DetonDiffrac/: GNUmakefile  README.md  detonation-diffrac.ini  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/DoubleRamp/: GNUmakefile  README.md  double-ramp-isothermal.ini  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/FlatPlate/: CMakeLists.txt  GNUmakefile  README.md  analysis.ipynb  flat-plate.ini  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/FlatPlate/Null2/: Make.package  mechanism.H
EB_CNS/Exec/FlatPlate_EB/: CMakeLists.txt  GNUmakefile  flat-plate-eb.ini  inputs  inputs_incline  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/ForwardStep/: GNUmakefile  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/MMS/: GNUmakefile  analysis.ipynb  inputs_mms  install_masa.sh  prob.H  prob.cpp  prob_parm.H  test_convergence.sh
EB_CNS/Exec/MichiganScramjet/: GNUmakefile  README.md  analysis.ipynb  inputs  inputs_test  inputs_wm  prob.H  prob.cpp  prob_parm.H  ref_data.csv
EB_CNS/Exec/MixingLayer/: GNUmakefile  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/MixingLayer/OConaire/: mechanism.H  mechanism.cpp  mechanism.inp
EB_CNS/Exec/MixingLayer/Yetter/: convert.sh  mechanism.H  mechanism.cpp  mechanism.inp
EB_CNS/Exec/PMF0D/: GNUmakefile  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/PMF1D/: GNUmakefile  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/Pulse/: cns_prob.H
EB_CNS/Exec/ReactiveShockTube/: CMakeLists.txt  GNUmakefile  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/Riemann2D/: GNUmakefile  README.md  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/ShockRef/: cns_prob.H
EB_CNS/Exec/ShockReflect/: GNUmakefile  README.md  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/ShockReflect_EB/: README.md  dmr-eb.ini  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/ShockVortex/: GNUmakefile  README.md  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/ShuOsher/: GNUmakefile  inputs  plot.ipynb  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/Sod/: cns_prob.H
EB_CNS/Exec/Sod1D/: GNUmakefile  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/Sod1D_Stochastic/: GNUmakefile  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/SupersonicJet/: GNUmakefile  inputs  prob.H  prob.cpp  prob_parm.H  supersonic-jet.ini
EB_CNS/Exec/TGV/: GNUmakefile  inputs  prob.H  prob.cpp  prob_parm.H  tgv-64.ini
EB_CNS/Exec/TGV_Premixed/: GNUmakefile  gen_hit_ic2.py  hit.ini  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/TGV_mixing/: GNUmakefile  inputs  prob.H  prob.cpp  prob_parm.H
EB_CNS/Exec/Test/: GNUmakefile  inputs
EB_CNS/Exec/tmp/: inputs
Source/: Make.CNS
(+823 files in other folders)
